doing a dev tools panel

--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,6 @@
     "description": "Run queries on the DOM",
     "version": "0.2",
     "manifest_version": 3,
-    "permissions": ["storage", "activeTab", "scripting", "http://*/*", "https://*/*"],
-    "action": {
-        "default_popup": "popup.html"
-    },
-    "options_page": "options.html",
-    "devtools_page": "devtools.html",
-    "background": {
-        "scripts": [
-            "background.js"
-        ]
-    }
+    "permissions": ["storage", "activeTab", "scripting"],
+    "devtools_page": "devtools.html"
 }
